# Salon

./: .replit  README.md  api_key.py  app.py  check_torch_version.py  config.json  config.py  data.txt  faiss_index  openai_helper.py  prepare_data.py  pyproject.toml
static/: script.js  style.css
templates/: index.html
